gestion-eventos/f2-kubernetes-cloud/ws-catalogo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-catalogo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws-catalogo
  template:
    metadata:
      labels:
        app: ws-catalogo
    spec:
      serviceAccountName: ksa-backend
      containers:
        - name: ws-catalogo
          image: europe-southwest1-docker.pkg.dev/gestionreservaseventos/repo-eventos/ws-catalogo:v1
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "10m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /eventos/health/live
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /eventos/health/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.8.1
          args:
            - "--port=5432"
            - "gestionreservaseventos:europe-southwest1:gestion-eventos"
          securityContext:
            runAsNonRoot: true
---
apiVersion: v1
kind: Service
metadata:
  name: ws-catalogo-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  #type: LoadBalancer
  type: ClusterIP
  selector:
    app: ws-catalogo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
