gestion-eventos/f2-kubernetes-cloud/ws-reservas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-reservas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws-reservas
  template:
    metadata:
      labels:
        app: ws-reservas
    spec:
      serviceAccountName: ksa-backend
      containers:
        - name: ws-reservas
          image: europe-southwest1-docker.pkg.dev/gestionreservaseventos/repo-eventos/ws-reservas:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /reservas/health/live
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /reservas/health/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.8.1
          args:
            - "--port=5432"
            - "gestionreservaseventos:europe-southwest1:gestion-eventos"
          securityContext:
            runAsNonRoot: true
---
apiVersion: v1
kind: Service
metadata:
  name: ws-reservas-service
spec:
  #type: LoadBalancer
  type: NodePort
  selector:
    app: ws-reservas
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
